seperate entrance finder class